--- a/Week6_Explainable.ipynb
+++ b/Week6_Explainable.ipynb
@@ -479,6 +479,10 @@
     {
       "cell_type": "code",
       "source": [
+        "'''\n",
+        "This script code was generated using GPT-5 on 2025-10-04 at 01:02 and and then modified.\n",
+        "'''\n",
+        "\n",
         "from IPython.display import display, HTML\n",
         "\n",
         "order = [1, 2, 3, 7, 6, 4, 5]\n",
@@ -486,7 +490,7 @@
         "\n",
         "for i in order:\n",
         "    url = base_url.format(i)\n",
-        "    display(HTML(f\"<h3>Sample {i}</h3><img src='{url}' width='1200'>\"))\n"
+        "    display(HTML(f\"<img src='{url}' width='1200'>\"))\n"
       ],
       "metadata": {
         "colab": {
@@ -494,10 +498,10 @@
           "height": 1000
         },
         "id": "lNKHt2zPmRav",
-        "outputId": "c3a18efd-e9d0-4811-b3f6-b5bb091f9955"
+        "outputId": "c6de30e3-cd45-4517-ca71-ff284ff07477"
       },
       "id": "lNKHt2zPmRav",
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -506,7 +510,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<h3>Sample 1</h3><img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_1.png?raw=true' width='1200'>"
+              "<img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_1.png?raw=true' width='1200'>"
             ]
           },
           "metadata": {}
@@ -518,7 +522,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<h3>Sample 2</h3><img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_2.png?raw=true' width='1200'>"
+              "<img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_2.png?raw=true' width='1200'>"
             ]
           },
           "metadata": {}
@@ -530,7 +534,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<h3>Sample 3</h3><img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_3.png?raw=true' width='1200'>"
+              "<img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_3.png?raw=true' width='1200'>"
             ]
           },
           "metadata": {}
@@ -542,7 +546,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<h3>Sample 7</h3><img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_7.png?raw=true' width='1200'>"
+              "<img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_7.png?raw=true' width='1200'>"
             ]
           },
           "metadata": {}
@@ -554,7 +558,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<h3>Sample 6</h3><img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_6.png?raw=true' width='1200'>"
+              "<img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_6.png?raw=true' width='1200'>"
             ]
           },
           "metadata": {}
@@ -566,7 +570,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<h3>Sample 4</h3><img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_4.png?raw=true' width='1200'>"
+              "<img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_4.png?raw=true' width='1200'>"
             ]
           },
           "metadata": {}
@@ -578,7 +582,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<h3>Sample 5</h3><img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_5.png?raw=true' width='1200'>"
+              "<img src='https://github.com/ISL-0111/XAI_AIPI590.01_2025Fall/blob/main/Artifacts/Sample_5.png?raw=true' width='1200'>"
             ]
           },
           "metadata": {}
