--- a/Week6_Explainable.ipynb
+++ b/Week6_Explainable.ipynb
@@ -50,11 +50,11 @@
         "id": "7aab0738"
       },
       "source": [
-        "- **Rooftop Solar Energy System Detection in Cape Town**\n",
-        "    - Task : Detect and classify Solar Energy Systems (Solar Panel, Water Heater, Pool Heater) from aerial imagery\n",
-        "    - Purpose : Assess spatial adoption patterns of solar energy system and provide evicende to suppoert energy policy and planning in Cape Town\n",
+        "**Topic: Rooftop Solar Energy System Detection in Cape Town**\n",
+        "  - Task : Detect and classify Solar Energy Systems (Solar Panel, Water Heater, Pool Heater) from aerial imagery\n",
+        "  - Purpose : Assess spatial adoption patterns of solar energy system and provide evicende to suppoert energy policy and planning in Cape Town\n",
         "\n",
-        "*Note: This was my personal project('Energy Transition During Energy Crisis: Cape Town's Experience'). Therefore, I used the dataset and model that I had processed for that project*\n",
+        "    *Note: This was my personal project('Energy Transition During Energy Crisis: Cape Town's Experience'). Therefore, I used the dataset and model that I had processed for that project*\n",
         "\n",
         "-----"
       ]
@@ -501,7 +501,7 @@
         "outputId": "c6de30e3-cd45-4517-ca71-ff284ff07477"
       },
       "id": "lNKHt2zPmRav",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
